connect to the js file

--- a/country.html
+++ b/country.html
@@ -51,6 +51,7 @@
         </div>
     </div>
 
-    <script src="country_files.js"></script>
+    <script src="./js/country_files.js"></script>
+"></script>
 </body>
 </html>
